internal/server/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

:root {
    --pixelsize: 12px
}

* {
    font-family: Roboto, sans-serif;
}

article {
    max-width: 500px;
    margin: auto;
}

input[type=text] {
    border: 1px #ddd solid;
    padding: .5rem;
    display: block;
    width: 100%;
    box-sizing: border-box;
}

select {
    border: 1px #ddd solid;
}

button {
    background-color: #333;
    color: #fff;
    border: none;
    padding: .5rem;
}

button:hover {
    background-color: #444;
}

#quizform {
    display: grid;
    gap: 2rem;
}

#qr {
    background-color: #fff;
}

#qr, #qr td, #qr th {
    border-collapse: collapse;
    border: 1px #f0f0f0 solid;
}

.pixel {
    width: var(--pixelsize);
    height: var(--pixelsize);
}

.dark {
    background-color: black;
    border-color: black;
}

.flex {
    display: flex;
    gap: 2rem;
}
.question {
    display: grid;
    line-height: 1.5;
    margin-bottom: 1.5rem;
}

